--- a/config/vNIC_AVP_CheckDevice_AVS_FVL10G.ini
+++ b/config/vNIC_AVP_CheckDevice_AVS_FVL10G.ini
@@ -4,15 +4,15 @@
 hosts=1
 vms=1
 #virtio pci-sriov avp
-vm_name=avp_checkdriver
+vm_name=avp_checkdevice
 vif_model=avp
 flavor=4cpuS0
 image_name=flexran-new
 
 # case
-case_shell=./AutoTest/case/avp_checkdriver.sh
+case_shell=./AutoTest/case/vNIC_AVP_CheckDevice_AVS_FVL10G.sh
 
 # test data
 bus_list=('eth0 00:03.0 virtio virtio_net' \
-'eth1 00:04.0 RAM wrs_avp' \
-'eth2 00:05.0 RAM wrs_avp' )
+'eth1 00:04.0 RAM.*memory wrs-avp' \
+'eth2 00:05.0 RAM.*memory wrs-avp' )
