--- a/config/DPDK_VM_Installation_FVL10G.ini
+++ b/config/DPDK_VM_Installation_FVL10G.ini
@@ -4,13 +4,15 @@
 hosts=1
 vms=1
 #virtio pci-sriov avp
-vif_model=avp
+vif_model=virtio
 flavor=4cpus0
+time_delay=100
 
 # case
-case_shell=./AutoTest/case/vNIC_AVP_DriverReset_AVS_FVL10G.sh
+case_shell=./AutoTest/case/DPDK_VM_Installation_FVL10G.sh
 
 # test data
+files=~/APP
 
 # add common config
 common_configs="config/common_config.ini ../config/common_config.ini"
