--- a/config/vMemory_MemInfo.ini
+++ b/config/vMemory_MemInfo.ini
@@ -6,10 +6,8 @@
 hosts=1
 vms=1
 #virtio pci-sriov avp
-vm_name=avp_meminfo
 vif_model=avp
 flavor=4cpuS0
-image_name=flexran-new
 
 # case
 case_shell=./AutoTest/case/vMemory_MemInfo.sh
@@ -21,7 +19,11 @@ exp_huge_rsvd=0
 exp_huge_surp=0
 exp_huge_size="1048576kB"
 
-#log file
-DATE=`date "+%Y%m%d-%H%M%S"`
-case=`basename ${case_shell} .sh`
-LOGFILE=${PWD}/../log/${case}_${DATE}.log
+# add common config
+common_configs="config/common_config.ini ../config/common_config.ini"
+for common_config in ${common_configs};do
+    if [ -f ${common_config} ];then
+        . ${common_config}
+        break
+    fi
+done
