--- a/config/vNIC_AVP_CheckDevice_AVS_FVL10G.ini
+++ b/config/vNIC_AVP_CheckDevice_AVS_FVL10G.ini
@@ -4,10 +4,8 @@
 hosts=1
 vms=1
 #virtio pci-sriov avp
-vm_name=avp_checkdevice
 vif_model=avp
-flavor=4cpuS0
-image_name=flexran-new
+flavor=4cpus0
 
 # case
 case_shell=./AutoTest/case/vNIC_AVP_CheckDevice_AVS_FVL10G.sh
@@ -16,3 +14,12 @@ case_shell=./AutoTest/case/vNIC_AVP_CheckDevice_AVS_FVL10G.sh
 bus_list=('eth0 00:03.0 virtio virtio_net' \
 'eth1 00:04.0 RAM.*memory wrs-avp' \
 'eth2 00:05.0 RAM.*memory wrs-avp' )
+
+# add common config
+common_configs="config/common_config.ini ../config/common_config.ini"
+for common_config in ${common_configs};do
+    if [ -f ${common_config} ];then
+        . ${common_config}
+        break
+    fi
+done
