--- a/config/vNIC_SRIOV_DriverReset_FVL10G.ini
+++ b/config/vNIC_SRIOV_DriverReset_FVL10G.ini
@@ -4,12 +4,20 @@
 hosts=1
 vms=1
 #virtio pci-sriov avp
-vm_name=avp_checkdevice
-vif_model=avp
-flavor=4cpuS0
-image_name=flexran-new
+vif_model=pci-sriov
+flavor=4cpus0
 
 # case
-case_shell=./AutoTest/case/vNIC_AVP_DriverReset_AVS_FVL10G.sh
+case_shell=./AutoTest/case/vNIC_SRIOV_DriverReset_FVL10G.sh
 
 # test data
+IS_SRIOV=1
+
+# add common config
+common_configs="config/common_config.ini ../config/common_config.ini"
+for common_config in ${common_configs};do
+    if [ -f ${common_config} ];then
+        . ${common_config}
+        break
+    fi
+done
