--- a/config/vNIC_VHOST_DriverReset_AVS_FVL10G.ini
+++ b/config/vNIC_VHOST_DriverReset_AVS_FVL10G.ini
@@ -4,17 +4,17 @@
 hosts=1
 vms=1
 #virtio pci-sriov avp
-vif_model=avp
-flavor=4cpuS0
+vif_model=virtio
+flavor=4cpus0
 
 # case
-case_shell=./AutoTest/case/vNIC_AVP_DriverReset_AVS_FVL10G.sh
+case_shell=./AutoTest/case/vNIC_VHOST_DriverReset_AVS_FVL10G.sh
 
 # test data
 
 # add common config
-common_configs="config/common_config.ini ../config/common_config"
-for common_config in config/common_config.ini ../config/common_config;do
+common_configs="config/common_config.ini ../config/common_config.ini"
+for common_config in ${common_configs};do
     if [ -f ${common_config} ];then
         . ${common_config}
         break
