--- a/config/common_config.ini
+++ b/config/common_config.ini
@@ -3,9 +3,10 @@
 #image
 image_name=flexran-new
 
-#log file
-LOGFILE_PATH=~/AutoTest/log/`cat ${PWD}/../tmp`
-
 #vm
+flavor=4cpus1
 vm_name=`basename ${case_shell} .sh`
 case=${vm_name}
+
+#log file
+LOGFILE_PATH=~/AutoTest/log/`cat ${PWD}/../tmp| egrep "^${case} " |awk '{print $2}'`
