--- a/config/vProcessor_Prime95_Stress.ini
+++ b/config/vProcessor_Prime95_Stress.ini
@@ -6,19 +6,17 @@
 hosts=1
 vms=1
 #virtio pci-sriov avp
-vif_model=avp
+vif_model=virtio
 flavor=4cpuS0
+time_delay=200
 
 # case
-case_shell=./AutoTest/case/vMemory_MemInfo.sh
+case_shell=./AutoTest/case/vProcessor_Prime95_Stress.sh
 
 # test data
-exp_huge_total=4
-exp_huge_free=4
-exp_huge_rsvd=0
-exp_huge_surp=0
-exp_huge_size="1048576kB"
 
+
+files=~/bkctest/runner6.0.tar.gz
 # add common config
 common_configs="config/common_config.ini ../config/common_config.ini"
 for common_config in ${common_configs};do
