two vms function

--- a/config/common_config.ini
+++ b/config/common_config.ini
@@ -9,4 +9,9 @@ vm_name=`basename ${case_shell} .sh`
 case=${vm_name}
 
 #log file
-LOGFILE_PATH=~/AutoTest/log/`cat ${PWD}/../tmp| egrep "^${case} " |awk '{print $2}'`
+TMPFILE=tmp/$case
+vm_ip=`ifconfig |grep "192.168.0." |awk '{print $2}' > /dev/null`
+if [ $? == 0 ];then
+    LOGFILE=`cat ${PWD}/../tmp/${case} |grep "=${vm_ip}\>" |sed 's/\s/\n/g' |grep "LOGFILE=" |awk '{print $2}'`
+    LOGFILE_PATH=~/AutoTest/log/${LOGFILE}
+fi
