--- a/config/common_config.ini
+++ b/config/common_config.ini
@@ -10,8 +10,8 @@ case=${vm_name}
 
 #log file
 TMPFILE=tmp/$case
-vm_ip=`ifconfig |grep "192.168.0." |awk '{print $2}' > /dev/null`
+vm_ip=`ifconfig |grep "192.168.0." |awk '{print $2}'`
 if [ $? == 0 ];then
-    LOGFILE=`cat ${PWD}/../tmp/${case} |grep "=${vm_ip}\>" |sed 's/\s/\n/g' |grep "LOGFILE=" |awk '{print $2}'`
+    LOGFILE=`cat ${PWD}/../tmp/${case} |grep "=${vm_ip}\ " |sed 's/ /\n/g' |grep "LOGFILE=" |awk -F = '{print $2}'`
     LOGFILE_PATH=~/AutoTest/log/${LOGFILE}
 fi
