--- a/config/vQAT_CryptodevQatAutotest.ini
+++ b/config/vQAT_CryptodevQatAutotest.ini
@@ -17,7 +17,7 @@ exp_tests_total=122
 exp_tests_skipped=0
 exp_tests_executed=122
 exp_tests_unsupported=0
-ecp_tests_passed=122
+exp_tests_passed=122
 
 # add common config
 common_configs="config/common_config.ini ../config/common_config.ini"
