--- a/config/vQAT_signOfLifeTests_UserSpace.ini
+++ b/config/vQAT_signOfLifeTests_UserSpace.ini
@@ -11,8 +11,15 @@ time_delay=200
 # case
 case_shell=./AutoTest/case/vQAT_signOfLifeTests_UserSpace.sh
 
-# test data
+# test files
 files=~/APP
+
+# test data
+expect_software=1.0.3
+expect_total_submissions=80
+expect_total_responses=80
+expect_retries=0
+
 
 # add common config
 common_configs="config/common_config.ini ../config/common_config.ini"
