--- a/config/vNIC_VHOST_IperfStress_2Node_TCP_FVL10G.ini
+++ b/config/vNIC_VHOST_IperfStress_2Node_TCP_FVL10G.ini
@@ -1,16 +1,17 @@
 #!/usr/bin/env bash
 
 # VM config
-hosts=1
+hosts=2
 vms=2
 #virtio pci-sriov avp
 vif_model=virtio
-flavor=4cpus0
+flavor=Pktgen
 
 # case
-case_shell=./AutoTest/case/vNIC_VHOST_VLANFilter_AVS_FVL10G.sh
+case_shell=./AutoTest/case/vNIC_VHOST_IperfStress_2Node_TCP_FVL10G.sh
 
 # test data
+type=tcp
 
 # add common config
 common_configs="config/common_config.ini ../config/common_config.ini"
