--- a/config/vNIC_VHOST_IperfStress_SingleNode_UDP_FVL10G.ini
+++ b/config/vNIC_VHOST_IperfStress_SingleNode_UDP_FVL10G.ini
@@ -5,12 +5,13 @@ hosts=1
 vms=2
 #virtio pci-sriov avp
 vif_model=virtio
-flavor=4cpus0
+flavor=Pktgen
 
 # case
-case_shell=./AutoTest/case/vNIC_VHOST_VLANFilter_AVS_FVL10G.sh
+case_shell=./AutoTest/case/vNIC_VHOST_IperfStress_SingleNode_UDP_FVL10G.sh
 
 # test data
+type=udp
 
 # add common config
 common_configs="config/common_config.ini ../config/common_config.ini"
