--- a/config/vNIC_AVP_IperfStress_SingleNode_UDP_FVL10G.ini
+++ b/config/vNIC_AVP_IperfStress_SingleNode_UDP_FVL10G.ini
@@ -4,13 +4,14 @@
 hosts=1
 vms=2
 #virtio pci-sriov avp
-vif_model=virtio
-flavor=4cpus0
+vif_model=avp
+flavor=Pktgen
 
 # case
-case_shell=./AutoTest/case/vNIC_VHOST_VLANFilter_AVS_FVL10G.sh
+case_shell=./AutoTest/case/vNIC_AVP_IperfStress_SingleNode_UDP_FVL10G.sh
 
 # test data
+type=udp
 
 # add common config
 common_configs="config/common_config.ini ../config/common_config.ini"
