--- a/config/vNIC_SRIOV_IperfStress_SingleNode_UDP_FVL10G.ini
+++ b/config/vNIC_SRIOV_IperfStress_SingleNode_UDP_FVL10G.ini
@@ -4,13 +4,16 @@
 hosts=1
 vms=2
 #virtio pci-sriov avp
-vif_model=virtio
-flavor=4cpus0
+vif_model=pci-sriov
+flavor=Pktgen
+time_delay=150
 
 # case
-case_shell=./AutoTest/case/vNIC_VHOST_VLANFilter_AVS_FVL10G.sh
+case_shell=./AutoTest/case/vNIC_SRIOV_IperfStress_SingleNode_UDP_FVL10G.sh
 
 # test data
+files=~/APP1
+type=udp
 
 # add common config
 common_configs="config/common_config.ini ../config/common_config.ini"
