--- a/config/vNIC_SRIOV_VLANFilter_FVL10G.ini
+++ b/config/vNIC_SRIOV_VLANFilter_FVL10G.ini
@@ -4,11 +4,11 @@
 hosts=1
 vms=2
 #virtio pci-sriov avp
-vif_model=virtio
+vif_model=pci-sriov
 flavor=4cpus0
 
 # case
-case_shell=./AutoTest/case/vNIC_VHOST_VLANFilter_AVS_FVL10G.sh
+case_shell=./AutoTest/case/vNIC_SRIOV_VLANFilter_FVL10G.sh
 
 # test data
 
