--- a/config/vNIC_SRIOV_Traffic_SingleNode_JumboFrame_FVL10G.ini
+++ b/config/vNIC_SRIOV_Traffic_SingleNode_JumboFrame_FVL10G.ini
@@ -2,16 +2,16 @@
 
 # VM config
 hosts=1
-vms=1
+vms=2
 #virtio pci-sriov avp
 vif_model=virtio
-flavor=4CPUS0
-time_delay=150
-
-case_shell=./AutoTest/case/vQAT_Installation.sh
+flavor=Pktgen
+time_delay=130
+# case
+case_shell=./AutoTest/case/vNIC_SRIOV_Traffic_SingleNode_JumboFrame_FVL10G.sh
 
 # test data
-files=~/APP
+files="APP bkctest"
 
 # add common config
 common_configs="config/common_config.ini ../config/common_config.ini"
