--- a/Installation/extlinux.conf
+++ b/Installation/extlinux.conf
@@ -4,6 +4,6 @@ DEFAULT linux
 LABEL linux
   KERNEL vmlinuz
   INITRD initramfs.img
-  APPEND rw root=LABEL=wrs_guest clock=pit console=tty0 console=ttyS0 biosdevname=0 net.ifnames=0 no_timer_check isolcpus=1-18 irqaffinity=0 default_hugepagesz=1G hugepagesz=1G hugepages=10 clocksource=tsc tsc=erfect intel_idle.max_cstate=0 processor.max_cstate=1 nohz_full=1-18 initrd=initramfs.img BOOT_IMAGE=vmlinuz
+  APPEND rw root=LABEL=wrs_guest clock=pit console=tty0 console=ttyS0 biosdevname=0 net.ifnames=0 no_timer_check isolcpus=1-18 irqaffinity=0 default_hugepagesz=1G hugepagesz=1G hugepages=10 clocksource=tsc tsc=perfect intel_idle.max_cstate=0 processor.max_cstate=1 nohz_full=1-18 initrd=initramfs.img BOOT_IMAGE=vmlinuz
 for VM
 
