--- a/config/FlexRAN_2_108.ini
+++ b/config/FlexRAN_2_108.ini
@@ -1,19 +1,19 @@
 #!/usr/bin/env bash
+# source under case folder
+
 
 # VM config
-hosts=2
-vms=2
+hosts=1
+vms=1
 #virtio pci-sriov avp
-vif_model=pci-sriov
-flavor=Pktgen
-time_delay=150
+vif_model=virtio
+time_delay=200
 
 # case
-case_shell=./AutoTest/case/vNIC_SRIOV_IperfStress_2Node_UDP_FVL10G.sh
+case_shell=./AutoTest/case/FlexRAN_2_108.sh
 
 # test data
 files=~/APP
-type=udp
 
 # add common config
 common_configs="config/common_config.ini ../config/common_config.ini"
@@ -23,3 +23,4 @@ for common_config in ${common_configs};do
         break
     fi
 done
+flavor=13cpus0
