--- a/config/vNIC_AVP_Traffic_2Node_JumboFrame_FVL10G.ini
+++ b/config/vNIC_AVP_Traffic_2Node_JumboFrame_FVL10G.ini
@@ -4,16 +4,14 @@
 hosts=2
 vms=2
 #virtio pci-sriov avp
-vif_model=pci-sriov
+vif_model=avp
 flavor=Pktgen
-time_delay=150
-
+time_delay=200
 # case
-case_shell=./AutoTest/case/vNIC_SRIOV_IperfStress_2Node_UDP_FVL10G.sh
+case_shell=./AutoTest/case/vNIC_AVP_Traffic_SingleNode_JumboFrame_FVL10G.sh
 
 # test data
-files=~/APP
-type=udp
+files="APP bkctest"
 
 # add common config
 common_configs="config/common_config.ini ../config/common_config.ini"
