--- a/config/vNIC_SRIOV_IperfStress_2Node_TCP_FVL10G.ini
+++ b/config/vNIC_SRIOV_IperfStress_2Node_TCP_FVL10G.ini
@@ -12,7 +12,7 @@ time_delay=150
 case_shell=./AutoTest/case/vNIC_SRIOV_IperfStress_2Node_TCP_FVL10G.sh
 
 # test data
-files=~/APP1
+files=~/APP
 type=tcp
 
 # add common config
