--- a/config/vNIC_SRIOV_Traffic_SingleNode_JumboFrame_FVL10G.ini
+++ b/config/vNIC_SRIOV_Traffic_SingleNode_JumboFrame_FVL10G.ini
@@ -4,9 +4,9 @@
 hosts=1
 vms=2
 #virtio pci-sriov avp
-vif_model=virtio
+vif_model=pci-sriov
 flavor=Pktgen
-time_delay=130
+time_delay=200
 # case
 case_shell=./AutoTest/case/vNIC_SRIOV_Traffic_SingleNode_JumboFrame_FVL10G.sh
 
